@@ -951,12 +951,9 @@ dvi_locate_native_font (const char *filename, uint32_t index,
   sprintf(fontmap_key, "%s/%u/%c/%d/%d/%d", path, index, layout_dir == 0 ? 'H' : 'V', extend, slant, embolden);
   mrec = pdf_lookup_fontmap_record(fontmap_key);
   if (mrec == NULL) {
-    if (pdf_insert_native_fontmap_record(path, index, layout_dir, extend, slant, embolden) == -1) {
+    if ((mrec = pdf_insert_native_fontmap_record(path, index, layout_dir, extend, slant, embolden)) == NULL) {
       ERROR("Cannot proceed without the font: %s", filename);
     }
-    mrec = pdf_lookup_fontmap_record(fontmap_key);
-    /* FIXME: would be more efficient if pdf_load_native_font returned the mrec ptr (or NULL for error)
-              so we could avoid doing a second lookup for the item we just inserted */
   }
 
   memset(&loaded_fonts[cur_id], 0, sizeof (struct loaded_font));
